--- a/src/views/chat.ejs
+++ b/src/views/chat.ejs
@@ -1,24 +1,28 @@
 <%- layout('layouts/layout.ejs') %>
 <div class="container-fluid">
     <!-- Centered chat box -->
-    <div class="card border-dark" style="height: 480px; width: 640px">
-        <div class="card-header border-0">
-            Chatbox
-        </div>
-        <div class="card-body d-flex align-items-start flex-column">
-            <div class="mb-auto" id="chat-box">
+    <div class="row">
+        <div class="col-md-4 offset-md-3">
+            <div class="card border-dark" style="height: 480px; width: 640px">
+                <div class="card-header border-0">
+                    Chatbox
+                </div>
+                <div class="card-body d-flex align-items-start flex-column">
+                    <div class="mb-auto" id="chat-box">
+                    </div>
+                    <small class="card-text" id="user-typing"></small>
+                </div>
+                <div class="d-none" id="chat-input-block">
+                    <input class="form-control border-0 text-dark flex-grow-1 bg-light" id="text-input" type="text"
+                        placeholder="Type message">
+                    <button type="button" class="btn btn-primary" id="send-button">Send</button>
+                </div>
+                <div class="d-flex" id="login-block">
+                    <input class="form-control border-0 text-dark flex-grow-1 bg-light" id="username" type="text"
+                        placeholder="@Username" autofocus>
+                    <button type="button" class="btn btn-primary" id="login-button">Login</button>
+                </div>
             </div>
-            <small class="card-text" id="user-typing"></small>
-        </div>
-        <div class="d-none" id="chat-input-block">
-            <input class="form-control border-0 text-dark flex-grow-1 bg-light" id="text-input" type="text"
-                placeholder="Type message">
-            <button type="button" class="btn btn-primary" id="send-button">Send</button>
-        </div>
-        <div class="d-flex" id="login-block">
-            <input class="form-control border-0 text-dark flex-grow-1 bg-light" id="username" type="text"
-                placeholder="@Username" autofocus>
-            <button type="button" class="btn btn-primary" id="login-button">Login</button>
         </div>
     </div>
 </div>
