--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,8 @@
 <%- layout('layouts/layout.ejs') %>
 <body>
   <!-- Welcome -->
-  <h1>Welcome!</h1>
+  <div class="jumbotron">
+      <h1>Welcome!</h1>
+      <p>to Chat App</p>
+  </div>
 </body>
