--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,31 +1,35 @@
 <%- layout('layouts/layout.ejs') %>
 <div class="container text-center">
-    <div class="card rounded-lg w-auto p-3 bg-light px-5">
-        <form class="form-group m-auto" action="/signup" method="POST">
-            <img class="mb-4" src="/img/chat_logo.png" alt="" width="25%" height="25%">
-            <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
-            <% if (signupMessage.length > 0) { %>
-            <div class="alert alert-danger" role="alert">
-                <%= signupMessage %>
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="card rounded-lg w-auto p-3 bg-light px-5">
+                <form class="form-group m-auto" action="/signup" method="POST">
+                    <img class="mb-4" src="/img/chat_logo.png" alt="" width="25%" height="25%">
+                    <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
+                    <% if (signupMessage.length > 0) { %>
+                    <div class="alert alert-danger" role="alert">
+                        <%= signupMessage %>
+                    </div>
+                    <% } %>
+                    <div class="form-group">
+                        <input type="email" name="email" class="form-control" placeholder="Email" required autofocus>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="password" class="form-control" placeholder="Password" required>
+                    </div>
+                    <div class="form-group form-check">
+                        <label>
+                            <input type="checkbox" value="remember-me"> Remember me
+                        </label>
+                    </div>
+                    <button class="btn btn-primary btn-block" type="submit">Sign up</button>
+                </form>
+                <div class="mt-3 form-group">
+                    <label for="signin">Or</label>
+                    <a href="/login">Sign in</a>
+                </div>
+                <p class="mb-3 text-muted">&copy; 2019</p>
             </div>
-            <% } %>
-            <div class="form-group">
-                <input type="email" name="email" class="form-control" placeholder="Email" required autofocus>
-            </div>
-            <div class="form-group">
-                <input type="password" name="password" class="form-control" placeholder="Password" required>
-            </div>
-            <div class="form-group form-check">
-                <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                </label>
-            </div>
-            <button class="btn btn-primary btn-block" type="submit">Sign up</button>
-        </form>
-        <div class="mt-3 form-group">
-            <label for="signin">Or</label>
-            <a href="/login">Sign in</a>
         </div>
-        <p class="mb-3 text-muted">&copy; 2019</p>
     </div>
 </div>
