Username parameter added to sign up

--- a/src/views/chat.ejs
+++ b/src/views/chat.ejs
@@ -6,7 +6,7 @@
             <div class="card border-dark" style="height: 480px; width: 640px">
                 <div class="card-header border-0">
                     <% if(user){ %>
-                    <p>Logged in as <strong id="usermail"><%- user.email %></strong></p>
+                    <p>Logged in as <strong id="username"><%- user.username %></strong></p>
                     <% } %>
                 </div>
                 <div class="card-body d-flex align-items-start flex-column">
