--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -15,6 +15,9 @@
                         <input type="email" name="email" class="form-control" placeholder="Email" required autofocus>
                     </div>
                     <div class="form-group">
+                        <input type="text" name="username" class="form-control" placeholder="Username" required>
+                    </div>
+                    <div class="form-group">
                         <input type="password" name="password" class="form-control" placeholder="Password" required>
                     </div>
                     <div class="form-group form-check">
