Profile page added

--- a/src/views/chat.ejs
+++ b/src/views/chat.ejs
@@ -16,7 +16,7 @@
                 </div>
                 <div class="d-flex" id="chat-input-block">
                     <input class="form-control border-0 text-dark flex-grow-1 bg-light" id="text-input" type="text"
-                        placeholder="Type message">
+                        placeholder="Type message" autofocus>
                     <button type="button" class="btn btn-primary" id="send-button">Send</button>
                 </div>
             </div>
