--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -15,6 +15,7 @@
     <nav class="nav d-flex mb-1">
         <a class="nav-link disabled mr-auto" href="#" tabindex="-1" aria-disabled="true">Logo</a>
         <% if(user) { %>
+        <a class="nav-link" href="/profile">Profile</a>
         <a class="nav-link" href="/logout">Log out</a>
         <% }else{ %>
         <a class="nav-link" href="/login">Log in</a>
